--- a/package.json
+++ b/package.json
@@ -7,14 +7,17 @@
     "build": "webpack --config webpack/webpack.prod.js",
     "clean": "rimraf dist",
     "test": "npx jest",
-    "style": "prettier \"src/**/*.{ts,tsx}\"",
+    "style": "prettier \"src/**/*.{ts,tsx}\" --write",
     "prepare": "./prepare_icons.sh"
+  },
+  "prettier":{
+    "semi": false
   },
   "author": "",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/chibat/chrome-extension-typescript-starter.git"
+    "url": "https://github.com/dcalvo/chrome-extension-typescript-starter.git"
   },
   "dependencies": {
     "crx-hotreload": "^1.0.6",
