--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
         "module": "commonjs",
         "target": "es6",
         "esModuleInterop": true,
-        "sourceMap": true,
+        "sourceMap": false,
         "rootDir": "src",
         "outDir": "dist/js",
         "jsx": "react",
