--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,27 +1,20 @@
 name: Build
 
 on:
-  push:
-    branches: [master]
   pull_request:
     branches: [master]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-    
-    steps:
 
+    steps:
       - uses: actions/checkout@v2.3.1
 
       - uses: actions/cache@v2
         with:
-          path: '**/node_modules'
-          key: ${{ runner.os }}-modules-${{ hashFiles('**/yarn.lock') }}      
-
-      - name: install build tools
-        run: brew install imagemagick
+          path: "**/node_modules"
+          key: ${{ runner.os }}-modules-${{ hashFiles('**/yarn.lock') }}
 
       - name: install
         run: yarn
